2003-06-07  Jason Long  <jlong@messiah.edu>

	* logview/logrtns.c (OpenLogFile): create a hash table
	when log is opened to store paths to date headers
	* logview/log_repaint.c (DrawLogLines): when a new day
	is discovered, add an entry to the hash table
	* logview/calendar.c (calendar_day_selected): use hash
	table to lookup path to the relevant log entry. Fixes #99676

2003-10-18  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-descript.db: Fix for #124345 from 
	mkb@mukappabeta.de for erroneous string.

2003-09-02  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, calendar.c, info.c, logview.c: Remove some ifdef'd
	  code.
	* pixmaps/*: Remove.

Fri Jul 18 12:35:50 2003  George Lebl <jirka@5z.com>

	* logview.c: If gconf is not writable don't write down the logfile
	  we found.  If the logfile we got is NULL, don't set it to gconf and
	  don't set the file selection to it to avoid warnings.

	* log_repaint.c: fix user_prefs check to be sane (it's never hit though)

2003-07-18  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* gnome-system-log.desktop.in: Use icon from the icon theme.

2003-06-08  Dennis Cranston <dennis_cranston at yahoo com>

	* zoom.c:  Prevent a crash when displaying entry details.

2003-06-06  Dennis Cranston <dennis_cranston at yahoo com>

	* about.c: "GNOME System Log Viewer" -> "System Log Viewer".

2003-05-31  Dennis Cranston <dennis_cranston at yahoo com>

	* actions.c, calendar.c, info.c, logview.c, monitor.c,
	zoom.c:  HIG related improvements.

2003-05-30  Dennis Cranston <dennis_cranston at yahoo com>

	* actions.c, info.c, log_repaint.c, logrtns.c, logview.c,
	monitor.c:  Various compiler warning fixes.

2003-05-19  Christian Neumair  <chris@gnome-de.org>

	* about.c: Don't mark copyright string for translation, added
	hex-escaped copyright character, changed comment to something
	more meaningful.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c: Fixed #103481 for large logs crashing.
