@@ -1,3 +1,8 @@
+2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>
+
+	* logview/logview.c: (FileSelectResponse), (LoadLogMenu): Replace
+	GtkFileSelection with GtkFileChooser.
+
 2003-06-07  Jason Long  <jlong@messiah.edu>
 
 	* logview/logrtns.c (OpenLogFile): create a hash table
